Application/yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: orgalmo-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orgalmo-hello-world
  template:
    metadata:
      labels:
        app: orgalmo-hello-world
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          image: 'quay.io/orgalmo/hello-world:v2'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
